gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22686.d
version https://git-lfs.github.com/spec/v1
oid sha256:6b7b3ae20f66d53989beb7521e9d2abcc9d1673df0cb996d7ee9eedd162b2750
size 367
